--- a/mvvm-image/mvvm-image/Base.lproj/Main.storyboard
+++ b/mvvm-image/mvvm-image/Base.lproj/Main.storyboard
@@ -21,23 +21,39 @@
                                 <rect key="frame" x="0.0" y="20" width="375" height="56"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="jCS-cv-tiU">
+                                <rect key="frame" x="0.0" y="76" width="375" height="542"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="WLf-e3-3F9">
+                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells/>
+                            </collectionView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="mPl-4z-PTv" firstAttribute="top" secondItem="PQr-Ze-W5v" secondAttribute="top" id="1AK-Hc-loQ"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="bottom" secondItem="jCS-cv-tiU" secondAttribute="bottom" id="3cO-FN-kgs"/>
+                            <constraint firstItem="PQr-Ze-W5v" firstAttribute="trailing" secondItem="jCS-cv-tiU" secondAttribute="trailing" id="Paj-v4-tBJ"/>
                             <constraint firstItem="mPl-4z-PTv" firstAttribute="centerX" secondItem="PQr-Ze-W5v" secondAttribute="centerX" id="ZgC-kt-sb7"/>
                             <constraint firstItem="mPl-4z-PTv" firstAttribute="width" secondItem="PQr-Ze-W5v" secondAttribute="width" id="n8S-cc-H0R"/>
+                            <constraint firstItem="jCS-cv-tiU" firstAttribute="top" secondItem="mPl-4z-PTv" secondAttribute="bottom" id="tyb-7m-JVg"/>
+                            <constraint firstItem="jCS-cv-tiU" firstAttribute="leading" secondItem="PQr-Ze-W5v" secondAttribute="leading" id="x38-z2-VuB"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
                     <connections>
+                        <outlet property="collectionView" destination="jCS-cv-tiU" id="1M0-Ti-2xH"/>
                         <outlet property="searchBar" destination="mPl-4z-PTv" id="8QG-6G-7Lb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W5J-7L-Pyd" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="750" y="-320"/>
+            <point key="canvasLocation" x="749.60000000000002" y="-320.68965517241384"/>
         </scene>
         <!--Second-->
         <scene sceneID="wg7-f3-ORb">
